refactor: 플레이어 복수형 일급 컬렉션 추가